--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,9 +1,11 @@
 server:
   port: 8080
+
 otel:
   service_name: "go-webserver"
-  collector_url: "localhost:4317"
   sample_ratio: 1.0
+  metrics_port: 8081
+
 secrets:
   db_password: "my_secret_db_password"
   api_key: "my_secret_api_key"
